[project]
name = "retropy"
version = "0.1.0"
description = "Python(ic) frontend for libretro cores"
authors = [
    {name = "29th-Day", email = "43274844+29th-Day@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
numpy = ["numpy"]

pygame = ["pygame", "numpy"]

gym = ["gymnasium", "numpy"]

all = ["gymasnium", "pygame", "numpy"]



[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/29th-Day/retropy"
