[project]
name = "retropy"
version = "0.1.0"
description = "Python(ic) frontend for libretro cores"
authors = [
    {name = "29th-Day", email = "43274844+29th-Day@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "numpy>=1.26.2",
    "mkdocs-material>=9.5.2",
    "mkdocstrings[python]>=0.24.0",
]
numpy = [
    "numpy>=1.26.2",
]
pygame = [
    "pygame>=2.5.2",
    "numpy>=1.26.2",
]
gym = [
    "gymnasium>=0.29.1",
    "numpy>=1.26.2",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project.urls]
Homepage = "https://github.com/29th-Day/retropy"
